Fix accessibility issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       --scouts-forest-green: #205b41;
       --scouts-blue: #006ddf;
       --scouts-navy: #003982;
-      --light-grey: rgb(241, 241, 241);
+      --light-grey: #f5f5f5;
     }
 
     * {
@@ -170,11 +170,11 @@
         <p>6 - 8 years</p>
       </div>
       <div class="box cubs">
-        <p><img src="assets/logo-cubs.svg" alt="Beavers"></p>
+        <p><img src="assets/logo-cubs.svg" alt="Cubs"></p>
         <p>8 - 10&frac12; years</p>
       </div>
       <div class="box navy">
-        <p><img src="assets/logo-scouts.svg" alt="Beavers"></p>
+        <p><img src="assets/logo-scouts.svg" alt="Scouts"></p>
         <p>10&frac12; - 14 years</p>
       </div>
     </div>
